[package]
name = "pallet-dao-votes"
version = "4.0.0-dev"
description = "FRAME pallet for the voting within a DAO"
authors = ["chp"]
homepage = "https://deep-ink.ventures"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/shredding/genesis-dao/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive", ] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", optional = true }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-dao-core = { version = "4.0.0-dev", default-features = false, path = "../dao-core" }
pallet-dao-assets = { version = "4.0.0-dev", default-features = false,  path = "../dao-assets" }

[dev-dependencies]
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking?/std",
	"scale-info/std",
	"sp-runtime/std",
	"pallet-balances/std",
	"pallet-dao-assets/std",
	"pallet-dao-core/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-dao-assets/runtime-benchmarks",
	"pallet-dao-core/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime"
]
